--- a/output/team.html
+++ b/output/team.html
@@ -19,13 +19,13 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>1</h3>
-                <h4>Manager</h4><i class="material-icons">supervisor_account</i>
+                <h3>4</h3>
+                <h4>intern</h4><i class="material-icons">supervisor_account</i>
             </div>
             <div class="card-body">
-                <p class="id">ID: 1</p>
-                <p class="email">Email: <a href="mailto:1">1</a></p>
-                <p class="office">Office Number: 1</p>
+                <p class="id">ID: 4</p>
+                <p class="email">Email: <a href="mailto:4">4</a></p>
+                <p class="office">School: 4</p>
             </div>
         </div>
     </div>
